--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 
   "manifest_version": 2,
   "name": "ucsb-gold calendar",
-  "description": "Add your current qaurter final exam schedule to Google Calendar.",
-  "version": "1.01",
+  "description": "Add your current classes and exams to Google Calendar.",
+  "version": "1.02",
 
   "background": {
     "page": "docs/background.html",
