--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "name": "ucsb-gold calendar",
   "description": "Add your current classes and exams to Google Calendar.",
-  "version": "1.05",
+  "version": "1.07",
 
   "background": {
     "page": "docs/background.html",
@@ -12,7 +12,7 @@
   },
 
   "page_action": {
-    "default_icon": "img/ucsb_logo.png",
+    "default_icon": "img/g.png",
     "default_popup": "docs/popup.html"
   },
 
